config/deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: scaffold
    app.kubernetes.io/managed-by: kustomize
  name: breakglass-system
