config/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: breakglass
  name: breakglass-api
  namespace: breakglass-system
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
  selector:
    app: breakglass
  type: ClusterIP
