config/deployment/ingress.yaml
# SPDX-FileCopyrightText: 2025 Deutsche Telekom AG
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: breakglass-ingress
  labels:
    app.kubernetes.io/name: myingress
spec:
  rules:
  - host: breakglass.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: breakglass
            port:
              name: http
